--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,24 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.scrollbar {
+    /* THis was commented because it was hidding the cross button(used for closing the loginOverlayer) */
+    /* overflow-y: auto; */ /* Enable scrolling */
+    scrollbar-width: none; /* Hide default scrollbar (for Firefox) */
+    -ms-overflow-style: none; /* Hide default scrollbar (for Edge) */
+
+}
+
+/* Create custom scrollbar appearance for WebKit-based browsers */
+.scrollbar::-webkit-scrollbar {
+    width: 0.5em; /* Adjust the width as needed */
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+    background-color: transparent; /* Hide the thumb */
+}
+
+.scrollbar::-webkit-scrollbar-track {
+    background-color: transparent; /* Hide the track */
+}
