Landing Page modified

--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,25 @@
 .scrollbar::-webkit-scrollbar-track {
     background-color: transparent; /* Hide the track */
 }
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+  
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+  
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+}
+  
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
